# OpenAvatarChat

./: .gitignore  .gitmodules  Dockerfile  README.md  build_and_run.sh  install.py  pyproject.toml  readme_cn.md
config/: chat_with_gs.yaml  chat_with_minicpm_gs.yaml  chat_with_minicpm_int4_gs.yaml  chat_with_openai_compatible_bailian_cosyvoice_musetalk.yaml  echo_with_gs.yaml
docs/: FAQ.md
scripts/: download_musetalk_weights.sh  post_config_install.sh  pre_config_install.sh
src/: demo.py
src/handlers/asr/sensevoice/: asr_handler_sensevoice.py
src/handlers/avatar/lam/: avatar_handler_lam_audio2expression.py
src/handlers/avatar/liteavatar/: avatar_processor.py  pyproject.toml
src/handlers/avatar/liteavatar/algo/: base_algo_adapter.py  tts2face_cpu_adapter.py
src/handlers/avatar/liteavatar/media/: speech_audio_processor.py
src/handlers/avatar/musetalk/: avatar_handler_musetalk.py  avatar_musetalk_algo.py  avatar_musetalk_config.py  avatar_musetalk_processor.py  musetalk_utils_preprocessing.py  pyproject.toml  requirements.txt
src/handlers/client/h5_rendering_client/: client_handler_lam.py
src/handlers/client/rtc_client/: client_handler_rtc.py
src/handlers/llm/minicpm/: llm_handler_minicpm.py  pyproject.toml
src/handlers/tts/bailian_tts/: tts_handler_cosyvoice_bailian.py
src/handlers/tts/cosyvoice/: pyproject.toml
src/service/rtc_service/turn_providers/: twilio_service.py
src/service/service_utils/: logger_utils.py  service_config_loader.py
tests/inttest/avatar/: demo.py  sample_adapter.py  sample_output_handler.py
